--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<tbody id="tabela-pacientes">
 						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
-							<td class="info-peso">100</td>
+							<td class="info-peso">1000</td>
 							<td class="info-altura">2.50</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
@@ -47,7 +47,7 @@
 
 						<tr class="paciente" >
 							<td class="info-nome">Erica</td>
-							<td class="info-peso">54</td>
+							<td class="info-peso">-54</td>
 							<td class="info-altura">1.64</td>
 							<td class="info-gordura">14</td>
 							<td class="info-imc">0</td>
@@ -56,7 +56,7 @@
 						<tr class="paciente">
 							<td class="info-nome">Douglas</td>
 							<td class="info-peso">85</td>
-							<td class="info-altura">1.73</td>
+							<td class="info-altura">-1.73</td>
 							<td class="info-gordura">24</td>
 							<td class="info-imc">0</td>
 						</tr>
@@ -72,6 +72,6 @@
 
 			</section>
 		</main>
-		<script src="js/calcula-um-imc.js"></script>
+		<script src="js/calculaTodosIMC.js"></script>
 	</body>
 </html>
