--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
-				<table>
+				<table class="tabela-pacientes">
 					<thead>
 						<tr>
 							<th>Nome</th>
@@ -99,5 +99,6 @@
 		</section>
 		<script src="js/calculaTodosIMC.js"></script>
 		<script src="js/incluiPaciente.js"></script>
+		<script src="js/removePaciente.js"></script>
 	</body>
 </html>
