--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtrar por: </label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 				<table class="tabela-pacientes">
 					<thead>
 						<tr>
@@ -100,5 +102,6 @@
 		<script src="js/calculaTodosIMC.js"></script>
 		<script src="js/incluiPaciente.js"></script>
 		<script src="js/removePaciente.js"></script>
+		<script src="js/filtro-tabela.js"></script>
 	</body>
 </html>
