fim do curso de introduçao - aula sobre uso de api para buscar dados

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 		</main>
 		<!-- ... -->
 		<section class="container">
+			<span id="erro-ajax" class="invisivel mensagens-erro">Erro ao buscar dados dos pacientes</span>
+			<button id="buscar-paciente" class="botao bto-principal">Buscar Pacientes</button>
 			<h2 id="titulo-form">Adicionar novo paciente</h2>
 			<ul class="mensagens-erro"></ul>
 			<form id="form-adiciona">
@@ -103,5 +105,6 @@
 		<script src="js/incluiPaciente.js"></script>
 		<script src="js/removePaciente.js"></script>
 		<script src="js/filtro-tabela.js"></script>
+		<script src="js/buscaPacientesAPI.js"></script>
 	</body>
 </html>
